--- a/package.json
+++ b/package.json
@@ -3,26 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "concurrently": "^4.0.1",
+    "customize-cra": "^0.2.4",
     "google-maps-react": "^2.0.2",
     "i": "^0.3.6",
+    "mobx": "^5.6.0",
+    "mobx-react": "^5.3.6",
+    "mobx-react-devtools": "^6.0.3",
     "npm": "^6.4.1",
     "react": "^16.6.0",
+    "react-app-rewire-mobx": "^1.0.9",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5"
   },
   "scripts": {
     "dev": "concurrently \"npm run jsonServerStart\" \"npm run start\"",
     "jsonServerStart": "cd jsonServer && npm run start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
