--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "customize-cra": "^0.2.4",
     "google-maps-react": "^2.0.2",
     "i": "^0.3.6",
+    "idb": "^2.1.3",
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
     "mobx-react-devtools": "^6.0.3",
